EditSayingsCollectionViewController dataSource + delete support

--- a/Vocable/Features/Settings/EditSayings/EditSayingsCollectionViewCell.xib
+++ b/Vocable/Features/Settings/EditSayings/EditSayingsCollectionViewCell.xib
@@ -58,6 +58,7 @@
             </collectionViewCellContentView>
             <size key="customSize" width="562" height="138"/>
             <connections>
+                <outlet property="deleteButton" destination="r2i-5v-HG5" id="onW-S6-HnY"/>
                 <outlet property="textLabel" destination="vav-Zc-tQ2" id="68L-6v-kfY"/>
             </connections>
             <point key="canvasLocation" x="-115.94202898550725" y="124.55357142857142"/>
