--- a/Vocable/Common/Views/PhraseSavedView.xib
+++ b/Vocable/Common/Views/PhraseSavedView.xib
@@ -1,40 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view alpha="0.0" contentMode="scaleToFill" restorationIdentifier="WarningView" id="yiJ-Tr-Jim" userLabel="savePhraseView">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+        <view opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="yiJ-Tr-Jim" userLabel="savePhraseView" customClass="PhraseSavedView" customModule="Vocable" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="387" height="108"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Saved to &quot;My Savings&quot;" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="fEx-Zh-S4e">
-                    <rect key="frame" x="25" y="434" width="364" height="38.5"/>
-                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="32"/>
-                    <color key="textColor" red="0.96079725029999996" green="0.96076112989999995" blue="0.960785687" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="750" text="Saved to My Sayings" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fEx-Zh-S4e">
+                    <rect key="frame" x="32" y="16" width="323" height="76"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="48"/>
+                    <color key="textColor" name="DefaultFontColor"/>
                     <nil key="highlightedColor"/>
+                    <variation key="widthClass=compact">
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                    </variation>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="0.12549019607843137" green="0.10980392156862745" blue="0.35686274509803922" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <accessibility key="accessibilityConfiguration" identifier="WarningView"/>
             <constraints>
-                <constraint firstItem="fEx-Zh-S4e" firstAttribute="leading" secondItem="PHA-Wo-3xQ" secondAttribute="leading" constant="25" id="F6a-Yj-fwh"/>
-                <constraint firstItem="fEx-Zh-S4e" firstAttribute="centerX" secondItem="PHA-Wo-3xQ" secondAttribute="centerX" id="I6i-n0-aZ6"/>
-                <constraint firstItem="fEx-Zh-S4e" firstAttribute="centerY" secondItem="PHA-Wo-3xQ" secondAttribute="centerY" id="XFX-L7-r4v"/>
-                <constraint firstItem="PHA-Wo-3xQ" firstAttribute="trailing" secondItem="fEx-Zh-S4e" secondAttribute="trailing" constant="25" id="Z72-3D-DUY"/>
+                <constraint firstAttribute="trailingMargin" secondItem="fEx-Zh-S4e" secondAttribute="trailing" id="GWB-Ur-efQ"/>
+                <constraint firstItem="fEx-Zh-S4e" firstAttribute="top" secondItem="yiJ-Tr-Jim" secondAttribute="topMargin" id="U0j-0K-NGR"/>
+                <constraint firstItem="fEx-Zh-S4e" firstAttribute="leading" secondItem="yiJ-Tr-Jim" secondAttribute="leadingMargin" id="eSP-vo-rwj"/>
+                <constraint firstAttribute="bottomMargin" secondItem="fEx-Zh-S4e" secondAttribute="bottom" id="jqx-on-aBa"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="PHA-Wo-3xQ"/>
+            <nil key="simulatedTopBarMetrics"/>
+            <nil key="simulatedBottomBarMetrics"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <edgeInsets key="layoutMargins" top="28" left="48" bottom="28" right="48"/>
             <userDefinedRuntimeAttributes>
-                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                    <integer key="value" value="20"/>
+                <userDefinedRuntimeAttribute type="color" keyPath="fillColor">
+                    <color key="value" red="0.12549019610000001" green="0.10980392160000001" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </userDefinedRuntimeAttribute>
             </userDefinedRuntimeAttributes>
-            <point key="canvasLocation" x="45" y="33"/>
+            <variation key="widthClass=compact">
+                <edgeInsets key="layoutMargins" top="16" left="32" bottom="16" right="32"/>
+            </variation>
+            <point key="canvasLocation" x="313.768115942029" y="110.49107142857143"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="DefaultFontColor">
+            <color red="0.81599998474121094" green="0.93199998140335083" blue="0.91299998760223389" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
