--- a/Vocable/Common/Views/WarningView.xib
+++ b/Vocable/Common/Views/WarningView.xib
@@ -3,24 +3,23 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view alpha="0.0" contentMode="scaleToFill" restorationIdentifier="WarningView" id="vne-Os-cO5" userLabel="warningView">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+        <view contentMode="scaleToFill" restorationIdentifier="WarningView" id="vne-Os-cO5" userLabel="warningView">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="96"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="S4d-WD-rX7">
-                    <rect key="frame" x="25" y="435" width="364" height="36"/>
+                <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="S4d-WD-rX7">
+                    <rect key="frame" x="24" y="60" width="366" height="20"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" image="CircleAlert" translatesAutoresizingMaskIntoConstraints="NO" id="vV9-av-v3S">
-                            <rect key="frame" x="0.0" y="0.0" width="36" height="36"/>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" insetsLayoutMarginsFromSafeArea="NO" image="CircleAlert" translatesAutoresizingMaskIntoConstraints="NO" id="vV9-av-v3S">
+                            <rect key="frame" x="0.0" y="0.0" width="37.5" height="20"/>
                         </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Please move closer to the device." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="OzB-7o-j7j">
-                            <rect key="frame" x="49" y="0.0" width="315" height="36"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" insetsLayoutMarginsFromSafeArea="NO" text="Please move closer to the device." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="OzB-7o-j7j">
+                            <rect key="frame" x="50.5" y="0.0" width="315.5" height="20"/>
                             <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                             <color key="textColor" red="0.96079725029999996" green="0.96076112989999995" blue="0.960785687" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             <nil key="highlightedColor"/>
@@ -28,23 +27,28 @@
                     </subviews>
                     <color key="backgroundColor" red="0.67843137249999996" green="0.0" blue="0.42352941179999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <color key="tintColor" red="0.67843137249999996" green="0.0" blue="0.42352941179999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="width" priority="250" constant="427" id="Qz0-Hu-BF5"/>
+                    </constraints>
                 </stackView>
             </subviews>
             <color key="backgroundColor" red="0.67843137249999996" green="0.0" blue="0.42352941179999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <accessibility key="accessibilityConfiguration" identifier="WarningView"/>
             <constraints>
-                <constraint firstItem="S4d-WD-rX7" firstAttribute="centerX" secondItem="AQu-Vm-ZvT" secondAttribute="centerX" id="0nA-XJ-UmI"/>
-                <constraint firstItem="S4d-WD-rX7" firstAttribute="centerY" secondItem="AQu-Vm-ZvT" secondAttribute="centerY" id="FaT-JM-wM4"/>
-                <constraint firstItem="S4d-WD-rX7" firstAttribute="leading" secondItem="AQu-Vm-ZvT" secondAttribute="leading" constant="25" id="Ur4-Ey-gW2"/>
-                <constraint firstItem="AQu-Vm-ZvT" firstAttribute="trailing" secondItem="S4d-WD-rX7" secondAttribute="trailing" constant="25" id="izi-Ji-eVb"/>
+                <constraint firstAttribute="bottomMargin" secondItem="S4d-WD-rX7" secondAttribute="bottom" id="6Hw-OE-h6J"/>
+                <constraint firstAttribute="trailingMargin" secondItem="S4d-WD-rX7" secondAttribute="trailing" id="Ae0-AK-re5"/>
+                <constraint firstItem="S4d-WD-rX7" firstAttribute="leading" secondItem="vne-Os-cO5" secondAttribute="leadingMargin" id="J4T-dO-7gl"/>
+                <constraint firstItem="S4d-WD-rX7" firstAttribute="top" secondItem="vne-Os-cO5" secondAttribute="topMargin" id="OXs-DF-elY"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="AQu-Vm-ZvT"/>
+            <nil key="simulatedBottomBarMetrics"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <edgeInsets key="layoutMargins" top="16" left="24" bottom="16" right="24"/>
             <userDefinedRuntimeAttributes>
                 <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                     <integer key="value" value="10"/>
                 </userDefinedRuntimeAttribute>
             </userDefinedRuntimeAttributes>
-            <point key="canvasLocation" x="45" y="33"/>
+            <point key="canvasLocation" x="44.927536231884062" y="-235.04464285714283"/>
         </view>
     </objects>
     <resources>
