--- a/Vocable/Features/Settings/Views/SettingsCollectionViewCell.xib
+++ b/Vocable/Features/Settings/Views/SettingsCollectionViewCell.xib
@@ -3,47 +3,57 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="H3V-Kp-Gwg" customClass="SettingsCollectionViewCell">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="H3V-Kp-Gwg" customClass="SettingsCollectionViewCell" customModule="Vocable" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="523" height="99"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Uen-IX-0c2">
                 <rect key="frame" x="0.0" y="0.0" width="523" height="99"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0yM-1f-UdS">
-                        <rect key="frame" x="16" y="36" width="53" height="27"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="r0N-lM-t9V">
-                        <rect key="frame" x="440" y="16" width="67" height="67"/>
-                        <constraints>
-                            <constraint firstAttribute="width" secondItem="r0N-lM-t9V" secondAttribute="height" multiplier="1:1" id="At1-Za-d2T"/>
-                        </constraints>
-                    </imageView>
+                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="Bhu-uK-cWQ">
+                        <rect key="frame" x="20" y="44" width="483" height="21"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0yM-1f-UdS">
+                                <rect key="frame" x="0.0" y="0.0" width="436.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="r0N-lM-t9V">
+                                <rect key="frame" x="460.5" y="2" width="22.5" height="17"/>
+                                <color key="tintColor" name="DefaultFontColor"/>
+                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="28" weight="bold"/>
+                            </imageView>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="r0N-lM-t9V" secondAttribute="trailing" constant="16" id="KG2-Xg-vVR"/>
-                    <constraint firstItem="r0N-lM-t9V" firstAttribute="top" secondItem="Uen-IX-0c2" secondAttribute="top" constant="16" id="KtM-Y4-WGd"/>
-                    <constraint firstAttribute="bottom" secondItem="r0N-lM-t9V" secondAttribute="bottom" constant="16" id="TPX-cx-OM3"/>
-                    <constraint firstItem="0yM-1f-UdS" firstAttribute="centerY" secondItem="Uen-IX-0c2" secondAttribute="centerY" id="eYw-Wm-qTs"/>
-                    <constraint firstItem="0yM-1f-UdS" firstAttribute="leading" secondItem="Uen-IX-0c2" secondAttribute="leading" constant="16" id="oRk-ZL-XlL"/>
+                    <constraint firstItem="Bhu-uK-cWQ" firstAttribute="top" secondItem="Uen-IX-0c2" secondAttribute="topMargin" id="9DT-II-c7B"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="Bhu-uK-cWQ" secondAttribute="trailing" id="SYr-pJ-Oun"/>
+                    <constraint firstItem="Bhu-uK-cWQ" firstAttribute="leading" secondItem="Uen-IX-0c2" secondAttribute="leadingMargin" id="fRG-at-Ius"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="Bhu-uK-cWQ" secondAttribute="bottom" id="prr-Ny-G8f"/>
                 </constraints>
                 <edgeInsets key="layoutMargins" top="16" left="16" bottom="16" right="16"/>
             </collectionViewCellContentView>
             <size key="customSize" width="523" height="99"/>
             <connections>
-                <outlet property="imageView" destination="r0N-lM-t9V" id="z0f-A3-VfJ"/>
+                <outlet property="imageView" destination="r0N-lM-t9V" id="Zgm-Ck-Ap8"/>
                 <outlet property="textLabel" destination="0yM-1f-UdS" id="RKf-Ja-aWf"/>
             </connections>
             <point key="canvasLocation" x="-667.39130434782612" y="-405.46875"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="chevron.right" catalog="system" width="48" height="64"/>
+        <namedColor name="DefaultFontColor">
+            <color red="0.81599998474121094" green="0.93199998140335083" blue="0.91299998760223389" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
